@@ -12,6 +12,7 @@
       <sourceFolder url="file://$MODULE_DIR$/plugins/system/webfinger/src" packagePrefix="Joomla\Plugin\System\WebFinger\" isTestSource="false"/>
       <sourceFolder url="file://$MODULE_DIR$/plugins/webfinger/activitypub/src" packagePrefix="Joomla\Plugin\WebFinger\ActivityPub\" isTestSource="false"/>
       <sourceFolder url="file://$MODULE_DIR$/plugins/webfinger/mastodon/src" packagePrefix="Joomla\Plugin\WebFinger\Mastodon\" isTestSource="false"/>
+      <sourceFolder url="file://$MODULE_DIR$/plugins/webservices/activitypub/src" packagePrefix="Joomla\Plugin\WebServices\ActivityPub\" isTestSource="false"/>
     </content>
     <orderEntry type="inheritedJdk"/>
     <orderEntry type="sourceFolder" forTests="false"/>
