@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ @package   FediverseForJoomla
+  ~ @copyright Copyright (c)2022 Nicholas K. Dionysopoulos
+  ~ @license   https://opensource.org/licenses/GPL-3.0 GPL-3.0-or-later
+  -->
+
+<extension type="plugin" group="webservices" method="upgrade">
+    <name>PLG_WEBSERVICES_ACTIVITYPUB</name>
+    <author>Nicholas K. Dionysopoulos</author>
+    <authorEmail>nicholas@dionysopoulos.me</authorEmail>
+    <authorUrl>https://www.dionysopoulos.me</authorUrl>
+    <copyright>Copyright (c)2022 Nicholas K. Dionysopoulos</copyright>
+    <license>GNU GPL v3 or later</license>
+    <creationDate>2022-12-18</creationDate>
+    <version>1.0.1</version>
+    <description>PLG_WEBSERVICES_ACTIVITYPUB_XML_DESCRIPTION</description>
+    <namespace path="src">Joomla\Plugin\WebServices\ActivityPub</namespace>
+
+    <files>
+        <folder>services</folder>
+        <folder plugin="activitypub">src</folder>
+    </files>
+
+    <languages folder="language">
+        <language tag="en-GB">en-GB/plg_webservices_activitypub.ini</language>
+        <language tag="en-GB">en-GB/plg_webservices_activitypub.sys.ini</language>
+    </languages>
+</extension>
