@@ -1,0 +1,2 @@
+PLG_WEBSERVICES_ACTIVITYPUB="Web Services - ActivityPub"
+PLG_WEBSERVICES_ACTIVITYPUB_XML_DESCRIPTION="Adds ActivityPub routes to the API for your website."
