@@ -1,0 +1,43 @@
+<?php
+/**
+ * @package   FediverseForJoomla
+ * @copyright Copyright (c)2022 Nicholas K. Dionysopoulos
+ * @license   https://opensource.org/licenses/GPL-3.0 GPL-3.0-or-later
+ */
+
+defined('_JEXEC') || die;
+
+use Joomla\CMS\Extension\PluginInterface;
+use Joomla\CMS\Factory;
+use Joomla\CMS\Plugin\PluginHelper;
+use Joomla\Database\DatabaseDriver;
+use Joomla\DI\Container;
+use Joomla\DI\ServiceProviderInterface;
+use Joomla\Event\DispatcherInterface;
+use Joomla\Plugin\WebServices\ActivityPub\Extension\ActivityPub;
+
+return new class implements ServiceProviderInterface {
+	/**
+	 * Registers the service provider with a DI container.
+	 *
+	 * @param   Container  $container  The DI container.
+	 *
+	 * @return  void
+	 * @since   2.0.0
+	 */
+	public function register(Container $container)
+	{
+		$container->set(
+			PluginInterface::class,
+			function (Container $container) {
+				$pluginsParams = (array) PluginHelper::getPlugin(type: 'webservices', plugin: 'activitypub');
+				$dispatcher    = $container->get(DispatcherInterface::class);
+				$plugin        = new ActivityPub(subject: $dispatcher, config: $pluginsParams);
+
+				$plugin->setApplication(application: Factory::getApplication());
+
+				return $plugin;
+			}
+		);
+	}
+};
