@@ -1,3 +1,7 @@
+Fediverse Tools for Joomla, version 2.0.0
+================================================================================
++ ActivityPub and WebFinger: make your Joomla site part of the Fediverse
+
 Fediverse Tools for Joomla, version 1.0.2
 ================================================================================
 + Greek translation
